--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="container">
       <!-- navigation start -->
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container">
@@ -49,8 +49,138 @@
         </div>
       </nav>
       <!-- navigation finish -->
-    </header>
+      <!-- carousel slider start -->
+      <section class="mt-5">
+        <div
+          id="carouselExampleControls"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active bg-info border rounded-3 p-5">
+              <div class="row">
+                <div class="col-lg-7 d-flex align-items-center">
+                  <div>
+                    <h2>Cool Dude Headphone</h2>
+                    <p>
+                      This is the best headphone in the world for people who
+                      just want to waste time in front of funky world.
+                    </p>
+                    <h1>$420</h1>
+                    <div class="btn panda-btn-buy-now">Buy Now</div>
+                  </div>
+                </div>
+                <div class="col-lg-5">
+                  <img
+                    src="images/banner-images/headphone.png"
+                    class="d-block img-fluid"
+                    alt="..."
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item active bg-info border rounded-3 p-5">
+              <div class="row">
+                <div class="col-lg-7 d-flex align-items-center">
+                  <div>
+                    <h2>Mega LCD TV For Sports</h2>
+                    <p>
+                      This is the best headphone in the world for people who
+                      just want to waste time in front of funky world.
+                    </p>
+                    <h1>$1200</h1>
+                    <div class="btn panda-btn-buy-now">Buy Now</div>
+                  </div>
+                </div>
+                <div class="col-lg-5">
+                  <img
+                    src="images/banner-images/tv.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
+            </div>
 
+            <div class="carousel-item active bg-info border rounded-3 p-5">
+              <div class="row">
+                <div class="col-lg-7 d-flex align-items-center">
+                  <div>
+                    <h2>X-Box for your living room</h2>
+                    <p>
+                      This is the best headphone in the world for people who
+                      just want to waste time in front of funky world.
+                    </p>
+                    <h1>$600</h1>
+                    <div class="btn panda-btn-buy-now">Buy Now</div>
+                  </div>
+                </div>
+                <div class="col-lg-5">
+                  <img
+                    src="images/banner-images/xbox.png"
+                    class="d-block img-fluid"
+                    alt="..."
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+      <!-- carousel slider end -->
+    </header>
+    <main>
+      <!-- categories start -->
+      <section>
+        <div class="container overflow-hidden text-center my-5">
+          <div class="row g-5">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div
+                class="p-3 border bg-light d-flex align-items-center justify-content-evenly rounded-3"
+              >
+                <h1>Watch</h1>
+                <img class="w-25" src="images/categories/watch.png" alt="" />
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div
+                class="p-3 border bg-light d-flex align-items-center justify-content-evenly rounded-3"
+              >
+                <h1>Bag</h1>
+                <img class="w-25" src="images/categories/bag.png" alt="" />
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div
+                class="p-3 border bg-light d-flex align-items-center justify-content-evenly rounded-3"
+              >
+                <h1>Shoes</h1>
+                <img class="w-25" src="images/categories/shoes.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- categories end -->
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
