--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 class="p-3 border bg-light d-flex align-items-center justify-content-evenly rounded-3"
               >
                 <h1>Watch</h1>
-                <img class="w-25" src="images/categories/watch.png" alt="" />
+                <img class="w-50" src="images/categories/watch.png" alt="" />
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
@@ -165,7 +165,7 @@
                 class="p-3 border bg-light d-flex align-items-center justify-content-evenly rounded-3"
               >
                 <h1>Bag</h1>
-                <img class="w-25" src="images/categories/bag.png" alt="" />
+                <img class="w-50" src="images/categories/bag.png" alt="" />
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
@@ -173,14 +173,136 @@
                 class="p-3 border bg-light d-flex align-items-center justify-content-evenly rounded-3"
               >
                 <h1>Shoes</h1>
-                <img class="w-25" src="images/categories/shoes.png" alt="" />
+                <img class="w-50" src="images/categories/shoes.png" alt="" />
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- categories end -->
     </main>
+    <!-- categories end -->
+    <section>
+      <!-- shoes categories start -->
+
+      <div class="container">
+        <h1 my-4>Shoes</h1>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-12 my-4">
+            <div class="card border border-0 shadow-lg h-100">
+              <img
+                src="images/shoes/shoe-1.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <h1>$160</h1>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <a href="#" class="btn btn-info">Buy Now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12 my-4">
+            <div class="card border border-0 shadow-lg h-100">
+              <img
+                src="images/shoes/shoe-2.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <h1>$160</h1>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <a href="#" class="btn btn-info">Buy Now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12 my-4">
+            <div class="card border border-0 shadow-lg h-100">
+              <img
+                src="images/shoes/shoe-3.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <h1>$160</h1>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <a href="#" class="btn btn-info">Buy Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- shoes categories end -->
+    </section>
+    <section>
+      <!-- backpack categories start -->
+
+      <div class="container">
+        <h1 class="my-4">Backpack</h1>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-12 my-4">
+            <div class="card border border-0 shadow-lg h-100">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <h1>$160</h1>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <a href="#" class="btn btn-info">Buy Now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12 my-4">
+            <div class="card border border-0 shadow-lg h-100">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <h1>$160</h1>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <a href="#" class="btn btn-info">Buy Now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12 my-4">
+            <div class="card border border-0 shadow-lg h-100">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <h1>$160</h1>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <a href="#" class="btn btn-info">Buy Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- backpack categories end -->
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
