--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">Shoes</a>
+                <a class="nav-link" href="#shoes">Shoes</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">Backpack</a>
+                <a class="nav-link" href="#backpack">Backpack</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">Subscribe</a>
+                <a class="nav-link" href="#subscribe">Subscribe</a>
               </li>
             </ul>
           </div>
@@ -102,7 +102,7 @@
               </div>
             </div>
 
-            <div class="carousel-item active bg-info border rounded-3 p-5">
+            <div class="carousel-item active bg-secondary border rounded-3 p-5">
               <div class="row">
                 <div class="col-lg-7 d-flex align-items-center">
                   <div>
@@ -184,7 +184,7 @@
     <section>
       <!-- shoes categories start -->
 
-      <div class="container">
+      <div class="container" id="shoes">
         <h1 my-4>Shoes</h1>
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-12 my-4">
@@ -251,7 +251,7 @@
     <section>
       <!-- backpack categories start -->
 
-      <div class="container">
+      <div class="container" id="backpack">
         <h1 class="my-4">Backpack</h1>
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-12 my-4">
@@ -303,6 +303,32 @@
       </div>
       <!-- backpack categories end -->
     </section>
+    <!-- form section start-->
+    <section
+      class="container bg-warning d-flex align-items-center justify-content-center"
+      style="height: 300px"
+      id="subscribe"
+    >
+      <div>
+        <h1>LET'S STAY IN TOUCH</h1>
+        <p>Get updates on sales, specials and more</p>
+        <form action="">
+          <input
+            type="email"
+            class="form-control"
+            id="exampleInputEmail1"
+            aria-describedby="emailHelp"
+          />
+          <button class="btn btn-primary text-light">Submit</button>
+        </form>
+      </div>
+    </section>
+    <!-- form section end  -->
+    <footer class="text-center my-5">
+      <!--footer starts -->
+      ©2023. Panda Commerce. All rights reserved. Sofia, Bulgaria.
+    </footer>
+    <!--footer end -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
