--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <!-- custom css style -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="container">
       <!-- navigation start -->
-      <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="navbar navbar-expand-lg panda-bg-light">
         <div class="container">
           <a class="navbar-brand" href="#">
             <img src="images/logo.png" alt="" />
@@ -33,16 +35,25 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a
+                  class="nav-link active text-white"
+                  aria-current="page"
+                  href="#"
+                  >Home</a
+                >
               </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="#shoes">Shoes</a>
+              <li class="nav-item">
+                <a class="nav-link active text-white" href="#shoes">Shoes</a>
               </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="#backpack">Backpack</a>
+              <li class="nav-item">
+                <a class="nav-link active text-white" href="#backpack"
+                  >Backpack</a
+                >
               </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="#subscribe">Subscribe</a>
+              <li class="nav-item">
+                <a class="nav-link active text-white" href="#subscribe"
+                  >Subscribe</a
+                >
               </li>
             </ul>
           </div>
@@ -57,7 +68,9 @@
           data-bs-ride="carousel"
         >
           <div class="carousel-inner">
-            <div class="carousel-item active bg-info border rounded-3 p-5">
+            <div
+              class="carousel-item active panda-bg-info border rounded-3 p-5"
+            >
               <div class="row">
                 <div class="col-lg-7 d-flex align-items-center">
                   <div>
@@ -67,7 +80,9 @@
                       just want to waste time in front of funky world.
                     </p>
                     <h1>$420</h1>
-                    <div class="btn panda-btn-buy-now">Buy Now</div>
+                    <div class="btn panda-btn-buy-now panda-btn-now">
+                      Buy Now
+                    </div>
                   </div>
                 </div>
                 <div class="col-lg-5">
@@ -79,7 +94,9 @@
                 </div>
               </div>
             </div>
-            <div class="carousel-item active bg-info border rounded-3 p-5">
+            <div
+              class="carousel-item active panda-bg-info border rounded-3 p-5"
+            >
               <div class="row">
                 <div class="col-lg-7 d-flex align-items-center">
                   <div>
@@ -89,7 +106,9 @@
                       just want to waste time in front of funky world.
                     </p>
                     <h1>$1200</h1>
-                    <div class="btn panda-btn-buy-now">Buy Now</div>
+                    <div class="btn panda-btn-buy-now panda-btn-now">
+                      Buy Now
+                    </div>
                   </div>
                 </div>
                 <div class="col-lg-5">
@@ -102,7 +121,9 @@
               </div>
             </div>
 
-            <div class="carousel-item active bg-secondary border rounded-3 p-5">
+            <div
+              class="carousel-item active panda-bg-info border rounded-3 p-5"
+            >
               <div class="row">
                 <div class="col-lg-7 d-flex align-items-center">
                   <div>
@@ -112,7 +133,9 @@
                       just want to waste time in front of funky world.
                     </p>
                     <h1>$600</h1>
-                    <div class="btn panda-btn-buy-now">Buy Now</div>
+                    <div class="btn panda-btn-buy-now panda-btn-now">
+                      Buy Now
+                    </div>
                   </div>
                 </div>
                 <div class="col-lg-5">
@@ -154,7 +177,7 @@
           <div class="row g-5">
             <div class="col-lg-4 col-md-6 col-sm-12">
               <div
-                class="p-3 border bg-light d-flex align-items-center justify-content-evenly rounded-3"
+                class="p-3 text-white shadow-md border panda-bg-light d-flex align-items-center justify-content-evenly rounded-3"
               >
                 <h1>Watch</h1>
                 <img class="w-50" src="images/categories/watch.png" alt="" />
@@ -162,7 +185,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
               <div
-                class="p-3 border bg-light d-flex align-items-center justify-content-evenly rounded-3"
+                class="p-3 text-white shadow-md border panda-bg-light d-flex align-items-center justify-content-evenly rounded-3"
               >
                 <h1>Bag</h1>
                 <img class="w-50" src="images/categories/bag.png" alt="" />
@@ -170,7 +193,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
               <div
-                class="p-3 border bg-light d-flex align-items-center justify-content-evenly rounded-3"
+                class="p-3 text-white shadow-md border panda-bg-light d-flex align-items-center justify-content-evenly rounded-3"
               >
                 <h1>Shoes</h1>
                 <img class="w-50" src="images/categories/shoes.png" alt="" />
@@ -202,7 +225,7 @@
                   lead-in to additional content. This content is a little bit
                   longer.
                 </p>
-                <a href="#" class="btn btn-info">Buy Now</a>
+                <a href="#" class="btn panda-btn-now">Buy Now</a>
               </div>
             </div>
           </div>
@@ -221,7 +244,7 @@
                   lead-in to additional content. This content is a little bit
                   longer.
                 </p>
-                <a href="#" class="btn btn-info">Buy Now</a>
+                <a href="#" class="btn panda-btn-now">Buy Now</a>
               </div>
             </div>
           </div>
@@ -240,7 +263,7 @@
                   lead-in to additional content. This content is a little bit
                   longer.
                 </p>
-                <a href="#" class="btn btn-info">Buy Now</a>
+                <a href="#" class="btn panda-btn-now">Buy Now</a>
               </div>
             </div>
           </div>
@@ -265,7 +288,7 @@
                   lead-in to additional content. This content is a little bit
                   longer.
                 </p>
-                <a href="#" class="btn btn-info">Buy Now</a>
+                <a href="#" class="btn panda-btn-now">Buy Now</a>
               </div>
             </div>
           </div>
@@ -280,7 +303,7 @@
                   lead-in to additional content. This content is a little bit
                   longer.
                 </p>
-                <a href="#" class="btn btn-info">Buy Now</a>
+                <a href="#" class="btn panda-btn-now">Buy Now</a>
               </div>
             </div>
           </div>
@@ -295,7 +318,7 @@
                   lead-in to additional content. This content is a little bit
                   longer.
                 </p>
-                <a href="#" class="btn btn-info">Buy Now</a>
+                <a href="#" class="btn panda-btn-now">Buy Now</a>
               </div>
             </div>
           </div>
@@ -305,7 +328,7 @@
     </section>
     <!-- form section start-->
     <section
-      class="container bg-warning d-flex align-items-center justify-content-center"
+      class="container panda-bg-info d-flex align-items-center justify-content-center"
       style="height: 300px"
       id="subscribe"
     >
@@ -319,7 +342,7 @@
             id="exampleInputEmail1"
             aria-describedby="emailHelp"
           />
-          <button class="btn btn-primary text-light">Submit</button>
+          <div class="btn panda-btn-buy-now panda-btn-now">Submit >></div>
         </form>
       </div>
     </section>
